hphp/test/zend/bad/ext/standard/tests/file/symlink_link_linkinfo_is_link_variation6.php.skipif
<?php
if ( substr(PHP_OS, 0, 3) == 'WIN' ) {
    die('skip no symlinks on Windows');
}
if ( substr(PHP_OS, 0, 3) == 'MAC' ) {
    die('skip Not valid for MacOS');
}
if (PHP_INT_SIZE != 4) {
  die("skip this test is for 32bit platform only");
}

// Skip if being run by root (files are always readable, writeable and executable)
$filename = dirname(__FILE__)."/symlink_link_linkinfo_is_link6_check_root.tmp";
$fp = fopen($filename, 'w');
fclose($fp);
if(fileowner($filename) == 0) {
        unlink ($filename);
        die('skip cannot be run as root');
}

unlink($filename);
?>